2013-08-22    <mggimenez@i-nis.com.ar>

	* Soporte para envío de resumen vía correo electrónico en todos los scripts.

2013-03-02    <mggimenez@i-nis.com.ar>

	* Actualizacion de backup_clean.cron.

2013-03-01    <mggimenez@i-nis.com.ar>

	* pg_dump.cron: Script para realizar respaldos de bases de datos Postgres. 

2011-09-26    <mggimenez@i-nis.com.ar>

	*  backup_tape.cron: Se habilita compresión por hardware mediante las sentencias tape_control "defcompression 1" y tape_control "compression"
	*  backup_tape.cron: Se eliminan las opciones de borrado y rebobinado de cinta por ser innecesarias.  
	*  backup-cron_functions.sh: Utilización de compresión por hardware en vez de Bzip2.
	*  backup-cron_functions.sh: Utilización de "/usr/bin/mbuffer -t -m 128M -p 90 -s 65536 -f -o /dev/tape" como buffer para el dispositivo de 
	   cintas.


2010-06-24  Martin Andres Gomez Gimenez  <mggimenez@i-nis.com.ar>

	* Resolución del error al rebobinar la cinta (issue #5).

2010-06-22  Martin Andres Gomez Gimenez  <mggimenez@i-nis.com.ar>

	* backup-cron_functions.sh: Resolución de la incidencia relacionada los mensajes enviados por tar vía Syslog (issue #4).

2010-05-26  Martin Andres Gomez Gimenez  <mggimenez@i-nis.com.ar>

	* backup_tape.cron: solución del error al intentar borrar cinta (issue #3)

2010-05-17  Martin Andres Gomez Gimenez  <mggimenez@i-nis.com.ar>

	* Creación durante la instalación del usuario "admin" y del grupo "admin" (issue #1)

2010-05-06  Martin Andres Gomez Gimenez  <mggimenez@i-nis.com.ar>

	* Ebuilds para la versión 2.
	* backup_raiz.cron: utilización de la función clean_old_backups() para borrar antigüas copias de seguridad.
	* backup_usr.cron: utilización de la función clean_old_backups() para borrar antigüas copias de seguridad..
	* backup_var.cron: utilización de la función clean_old_backups() para borrar antigüas copias de seguridad.
	* backup_tape.cron: utilización de la función clean_old_backups() para borrar antigüas copias de seguridad.